Fix h2 issue onAbout page on mobile screens

--- a/css/index.css
+++ b/css/index.css
@@ -1380,6 +1380,7 @@ p.tag-wrap {
   }
 
   .article__body h2 {
+    display: inline-block;
     font-size: 1.3em;
     line-height: 1.2;
   }
